--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@
     background-size: cover;
 }
 
+.card {
+    width: 100%;
+    height: 100%;
+}
+
 .card:hover {
     cursor: pointer;
     transform: scale(1.05);
@@ -55,6 +60,16 @@
     width: calc(100% / 3); /* Set width to 33.33% for three visible slides */
     opacity: 1; /* Initially, all slides are visible */
     transition: opacity 0.5s ease-in-out;/* Set width to 33.33% for three visible slides */
+}
+
+@media (max-width: 768px) {
+    .carousel-slide-license {
+        width: 100%;
+    }
+}
+
+#contact-panel {
+    transition: 400ms ease-in-out;
 }
 
 .carousel-slide-license img:hover {
