--- a/about/style.css
+++ b/about/style.css
@@ -27,3 +27,14 @@
     background-size: contain;
     background-position: left top;
 }
+
+.animate-scroll {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s, transform 0.5s;
+}
+
+.animate-scroll.active {
+    opacity: 1;
+    transform: translateY(0);
+}
