--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 html, body {
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .container-sm {
