--- a/service/style.css
+++ b/service/style.css
@@ -1,3 +1,7 @@
+/* html, body {
+    overflow-y: hidden;
+} */
+
 .bg-service {
     background-image: url('../imgs/service_bg.png');
     background-repeat: no-repeat;
