--- a/index.css
+++ b/index.css
@@ -6,6 +6,28 @@ html, body {
     overflow-x: hidden;
 }
 
+.animation-pulse {
+    /*box-shadow: 0 0 0 20px rgba(229,62,62, 0.5);
+    transform: scale(0.8);*/
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.8);
+        box-shadow: 0 0 0 0 #092A5E
+    }
+
+    70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 40px rgba(5, 81, 244, 0)
+    }
+
+    100% {
+        transform: scale(0.8);
+    }
+}
+
 .container-sm {
     padding-right: 15px;
     padding-left: 15px;
