--- a/products/style.css
+++ b/products/style.css
@@ -1,4 +1,18 @@
+.products {
+    gap: 1px;
+}
 
+.product:nth-child(1) {
+    grid-row: span 2 / span 2;
+    grid-column: span 2 / span 2;
+}
+
+@media screen and (max-width: 1107px) {
+    .product:nth-child(1) {
+        grid-row: span 1 / span 1;
+        grid-column: span 1 / span 1;
+    }
+}
 
 .product-item {
     outline: 1px solid #131314;
