--- a/products/style.css
+++ b/products/style.css
@@ -7,8 +7,18 @@
     grid-column: span 2 / span 2;
 }
 
+.product:nth-child(12) {
+    grid-row: span 2 / span 2;
+    grid-column: span 2 / span 2;
+}
+
 @media screen and (max-width: 1107px) {
     .product:nth-child(1) {
+        grid-row: span 1 / span 1;
+        grid-column: span 1 / span 1;
+    }
+
+    .product:nth-child(12) {
         grid-row: span 1 / span 1;
         grid-column: span 1 / span 1;
     }
